--- a/src/style/add-car.scss
+++ b/src/style/add-car.scss
@@ -1,14 +1,14 @@
 .add-car {
-  background-image: url(../images/ASDC_6-EDITED.jpg);
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: fill;
+  // background-image: url(../images/ASDC_6-EDITED.jpg);
+  // background-attachment: fixed;
+  // background-position: center;
+  // background-repeat: no-repeat;
+  // background-size: fill;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  color: #f30909;
+  color: #0075a2;
   // #0075a2
 
   &-form {
