--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -32,3 +32,18 @@ body {
 @import "./navbar.scss";
 @import "./add-car.scss";
 @import "./garage.scss";
+@media (max-width: 48em) {
+  .style-details {
+    grid-template-columns: 1fr;
+    grid-gap: 20px;
+  }
+
+  .style-details-text {
+    text-align: center;
+  }
+
+  .showroom {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+}
