media Q and navbar

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -50,4 +50,8 @@ body {
     display: grid;
     grid-template-columns: 1fr;
   }
+  .navbar {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
 }
