--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -36,7 +36,7 @@ body {
 @import "./navbar.scss";
 @import "./add-car.scss";
 @import "./garage.scss";
-@media (max-width: 48em) {
+@media (max-width: 481px) and (max-width: 767px) {
   .style-details {
     grid-template-columns: 1fr;
     grid-gap: 20px;
@@ -53,5 +53,6 @@ body {
   .navbar {
     display: grid;
     grid-template-columns: 1fr;
+    width: 80%;
   }
 }
