media Q and navbar

--- a/src/style/garage.scss
+++ b/src/style/garage.scss
@@ -5,8 +5,8 @@
   flex-direction: column;
   align-items: center;
   padding: 25px 40px;
-  color: #000000;
-  text-shadow: #d2d7df;
+  color: #d2d7df;
+  text-shadow: #000000;
   letter-spacing: 0.7px;
   line-height: 35px;
 }
